FIPS-12949/FIPS-12350 :: refactored code (java 21)
Change-Id: I9619f8f9556ead363e6c7851c1d5fa5ba3d5bc62